[gd_scene load_steps=3 format=3 uid="uid://dpo6pv4jbf27w"]

[ext_resource type="Script" uid="uid://dk15tr31yvu73" path="res://Script/start.gd" id="1_og4jd"]
[ext_resource type="Texture2D" uid="uid://35gfti1fitws" path="res://images/background/mainPage.jpg" id="2_nt0jr"]

[node name="Start" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_og4jd")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 3266.6665
offset_bottom = 1800.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_nt0jr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 247.0
offset_right = 335.0
offset_bottom = 882.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "新的开始"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "读取存档"

[node name="gamesetting" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "游戏设置"

[node name="CG" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "画廊鉴赏"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "离开游戏
"
